<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#b0000000">

    <RelativeLayout
        android:layout_width="281dp"
        android:layout_height="166dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="233dp"
        android:background="@drawable/review_head_bg">

        <TextView
            android:id="@+id/tv_title1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="31dp"
            android:layout_marginTop="36dp"
            android:text="@string/review_head_title4"
            android:textColor="@color/C0321"
            android:textSize="@dimen/f2"/>

        <TextView
            android:id="@+id/tv_title2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/tv_title1"
            android:layout_toRightOf="@+id/tv_title1"
            android:text="@string/review_head_title5"
            android:textColor="@color/C0315"
            android:textSize="@dimen/f2"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tv_title3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/tv_title1"
            android:layout_below="@+id/tv_title1"
            android:layout_marginTop="15dp"
            android:text="@string/review_head_title6"
            android:textColor="@color/C0322"
            android:textSize="@dimen/f4"/>

        <Button
            android:id="@+id/review_left_btn"
            android:layout_width="130dp"
            android:layout_height="44dp"
            android:layout_below="@+id/tv_title3"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/review_head_left_btn"
            android:text="@string/review_left_btn_text"
            android:visibility="gone"
            android:textColor="@color/C0323"/>

        <Button
            android:id="@+id/review_right_btn"
            android:layout_width="130dp"
            android:layout_height="44dp"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_alignBottom="@+id/review_left_btn"
            android:layout_below="@+id/tv_title3"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="23dp"
            android:layout_toRightOf="@+id/review_left_btn"
            android:background="@drawable/review_head_right_btn"
            android:text="@string/review_right_btn_text"
            android:visibility="gone"
            android:textColor="@color/C0412"/>

        <Button
            android:id="@+id/review_single_btn"
            android:layout_width="201dp"
            android:layout_height="45dp"
            android:layout_alignBottom="@+id/review_left_btn"
            android:layout_below="@+id/tv_title3"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="24dp"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:background="@drawable/review_head_right_btn"
            android:text="@string/review_left_btn_text"
            android:textColor="@color/C0412"/>

    </RelativeLayout>

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/riv_edit_head"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginLeft="232dp"
        android:layout_marginTop="198dp"
        android:scaleType="centerCrop"
        android:src="@drawable/lv101112_xhdpi"
        app:riv_border_color="@color/white"
        app:riv_border_width="2dp"
        app:riv_oval="true"/>

</FrameLayout>
