<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	android:paddingLeft="44px"
	android:paddingRight="44px">
	<TextView
		android:id="@+id/tv_show_text"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginBottom="40px"
		android:layout_marginTop="50px"
		android:text="请输入"
		android:textColor="@color/FC2"
		android:textSize="@dimen/f3"/>
	<com.zhy.autolayout.AutoLinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">
		<com.joanzapata.iconify.widget.IconTextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_vertical"
			android:text="{eam-s-protect @dimen/f3}"
			android:textColor="@color/FC3"/>
		<EditText
			android:id="@+id/ew_modify_verify_code"
			style="@style/inputTextStyle"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_gravity="center_vertical"
			android:layout_marginLeft="20px"
			android:layout_weight="1"
			android:background="@color/transparent"
			android:gravity="center_vertical"
			android:hint="@string/input_verify_code"
			android:inputType="number"/>
		<View android:layout_width="0.5dp"
			  android:layout_height="match_parent"
			  android:background="@color/main_separator_color"/>
		<TextView
			android:id="@+id/tv_get_security_code"
			android:layout_width="220px"
			android:layout_height="wrap_content"
			android:gravity="center_horizontal"
			android:text="发送验证码"
			android:textColor="@color/MC7"
			android:textSize="@dimen/f3"/>
	</com.zhy.autolayout.AutoLinearLayout>

	<View android:layout_width="match_parent"
		  android:layout_height="0.5dp"
		  android:layout_marginLeft="43px"
		  android:layout_marginTop="20px"
		  android:background="@color/main_separator_color"/>
	<com.zhy.autolayout.AutoLinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginBottom="40px"
		android:layout_marginTop="20px"
		android:gravity="right"
	>
		<TextView
			android:id="@+id/tv_tip"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/tryOtherStyle"
			android:textSize="@dimen/f3"/>
		<TextView
			android:id="@+id/tv_sound_code"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginRight="28px"
			android:layout_toRightOf="@+id/tv_tip"
			android:text="@string/voiceCode"
			android:textColor="@color/MC7"
			android:textSize="@dimen/f3"/>

	</com.zhy.autolayout.AutoLinearLayout>

</com.zhy.autolayout.AutoLinearLayout>