<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
				android:layout_width="match_parent"
				android:layout_height="match_parent">
	<ImageView
		android:id="@+id/img_live_room_cover"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:scaleType="centerCrop"/>
	<com.zhy.autolayout.AutoLinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:background="@color/translucent"
		android:gravity="center_horizontal"
		android:orientation="vertical">
		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="320px"
			android:gravity="center"
			android:text="@string/live_end_tips"
			android:textColor="@color/MC2"
			android:textSize="@dimen/f1"/>
		<!-- 获赞数量 -->
		<com.zhy.autolayout.AutoLinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="15dp">
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="本次直播收获"
				android:textColor="@color/white"
				android:textSize="@dimen/f2"/>
			<TextView
				android:id="@+id/tv_admires"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="5px"
				android:layout_marginRight="5px"
				android:gravity="center"
				android:text="0"
				android:textColor="@color/MC2"
				android:textSize="@dimen/f2"/>
			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="center"
				android:text="@string/live_admires_tips"
				android:textColor="@color/white"
				android:textSize="@dimen/f2"/>
		</com.zhy.autolayout.AutoLinearLayout>
		<com.zhy.autolayout.AutoLinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="34dp"
			android:gravity="center"
			android:orientation="horizontal">
			<!-- 直播时长 -->
			<com.zhy.autolayout.AutoLinearLayout
				android:layout_width="105dp"
				android:layout_height="70dp"
				android:background="@drawable/round_white_bg_live_end"
				android:gravity="center"
				android:orientation="vertical">
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:gravity="center"
					android:text="@string/live_time_tips"
					android:textColor="@color/white"
					android:textSize="@dimen/f3"/>
				<TextView
					android:id="@+id/tv_time"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginTop="5dp"
					android:gravity="center"
					android:text="00:00:00"
					android:textColor="@color/white"
					android:textSize="@dimen/f3"/>
			</com.zhy.autolayout.AutoLinearLayout>

			<!-- 观看人数 -->
			<com.zhy.autolayout.AutoLinearLayout
				android:layout_width="105dp"
				android:layout_height="70dp"
				android:layout_marginLeft="50dp"
				android:background="@drawable/round_white_bg_live_end"
				android:gravity="center"
				android:orientation="vertical">
				<TextView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:gravity="center"
					android:text="@string/live_members_tips"
					android:textColor="@color/white"
					android:textSize="@dimen/f3"/>
				<TextView
					android:id="@+id/tv_members"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginTop="5dp"
					android:gravity="center"
					android:text="7989"
					android:textColor="@color/white"
					android:textSize="@dimen/f3"/>

			</com.zhy.autolayout.AutoLinearLayout>
		</com.zhy.autolayout.AutoLinearLayout>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="45dp"
			android:text="分享到"
			android:textColor="@color/white"
			android:textSize="@dimen/f2"/>
		<HorizontalScrollView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="50dp"
			android:layout_marginRight="50dp"
			android:layout_marginTop="40px"
			android:scrollbars="none">
			<RadioGroup
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:orientation="horizontal">
				<RadioButton
					android:id="@+id/iv_shared_to_friend"
					android:layout_width="44dp"
					android:layout_height="44dp"
					android:background="@drawable/live_shared_to_friend"
					android:button="@null"/>
				<RadioButton
					android:id="@+id/iv_shared_to_sina"
					android:layout_width="44dp"
					android:layout_height="44dp"
					android:layout_marginLeft="17dp"
					android:background="@drawable/live_shared_to_sina"
					android:button="@null"/>
				<RadioButton
					android:id="@+id/iv_shared_to_weChatFriend"
					android:layout_width="44dp"
					android:layout_height="44dp"
					android:layout_marginLeft="17dp"
					android:background="@drawable/live_shared_to_wechat_friend_selector"
					android:button="@null"/>
				<RadioButton
					android:id="@+id/iv_shared_to_weChatMoments"
					android:layout_width="44dp"
					android:layout_height="44dp"
					android:layout_marginLeft="17dp"
					android:background="@drawable/live_shared_to_wechat_moment_selector"
					android:button="@null"/>
				<RadioButton
					android:id="@+id/iv_shared_to_QQ"
					android:layout_width="44dp"
					android:layout_height="44dp"
					android:layout_marginLeft="17dp"
					android:background="@drawable/live_shared_to_qq_selector"
					android:button="@null"/>
				<RadioButton
					android:id="@+id/iv_shared_to_QZone"
					android:layout_width="44dp"
					android:layout_height="44dp"
					android:layout_marginLeft="17dp"
					android:background="@drawable/live_shared_to_qzone_selector"
					android:button="@null"/>
			</RadioGroup>
		</HorizontalScrollView>


		<Button
			android:id="@+id/btn_cancel"
			android:layout_width="550px"
			android:layout_height="88px"
			android:layout_marginTop="60px"
			android:gravity="center"
			android:background="@drawable/round_white_bg_live_connect"
			android:text="@string/btn_return_home"
			android:textColor="@color/C0324"
			android:textSize="@dimen/f2"/>

	</com.zhy.autolayout.AutoLinearLayout>
</com.zhy.autolayout.AutoRelativeLayout>

